# monads-cxx

./: .clang_complete  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/expected/: detail.hpp  expected.hpp
include/monads/: exception_ptr.hpp  expected.hpp  optional.hpp
include/monads/detail/: common.hpp  expected.hpp  expected_impl.hpp  invoke.hpp  invoke_detail.hpp  optional.hpp  try_invoke.hpp
test/: exception_ptr.cpp  expected.cpp  main.cpp  optional.cpp
